--- a/views/index.jade
+++ b/views/index.jade
@@ -1,28 +1,64 @@
 doctype html
 html
   head
+    meta(charset='utf-8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
     title Socket.IO chat
+    link(href='/css/bootstrap.min.css', rel='stylesheet')
     link(rel='stylesheet', type='text/css', href='/css/common.css')
   body
-    div.board
-      div.player#topPlayer
-        img.card
-        span.playerName
-      div.player#leftPlayer
-        img.card
-        span.playerName
-      div.player#rightPlayer
-        img.card
-        span.playerName
-      div.player#bottomPlayer
-        img.card
-        span.playerName
-    ul#messages
-    form(action='')
-      input#m(autocomplete='off')
-      button Send
+    .container-fluid
+      .row
+        .col-sm-6
+          div.board
+            .row
+              .col-sm-5
+              .col-sm-2
+                div.player#topPlayer
+                  img.card
+                  span.playerName
+              .col-sm-5
+            .row
+              .col-sm-2
+                div.player#leftPlayer
+                  img.card
+                  span.playerName
+              .col-sm-8
+              .col-sm-2
+                div.player#rightPlayer
+                  img.card
+                  span.playerName
+            .row
+              .col-sm-5
+              .col-sm-2
+                div.player#bottomPlayer
+                  img.card
+                  span.playerName
+              .col-sm-5
+                //- div.boardOptions
+                //-   button(onclick="invitePlayers();") Invite players
+            .row
+              .col-sm-12
+                div#playerCards
+        .col-sm-4
+          span.well Messages
+          ul#messages
+        .col-sm-2
+          span.well Connected Users
+          ul#userList
+            if users
+              each user in users
+                li user
+          button(onclick='invitePlayers',style="margin-top: 25px;") Invite
       
+      form(action='')
+        input#m(autocomplete='off')
+        button Send
+    //- script(src='http://code.jquery.com/jquery-1.11.1.js')
+    script(src='http://code.jquery.com/jquery.js')
+    script(src='/js/bootstrap.js')
     script(src='/node_modules/socket.io-client/socket.io.js')
-    script(src='http://code.jquery.com/jquery-1.11.1.js')
     script(src='/js/chat.js')
+
  
