nouvelle structure OK, jeu OK, pas de fin... objet Deck, distribuer, interface display, click carte quand c'est son tour

--- a/views/login.jade
+++ b/views/login.jade
@@ -11,8 +11,8 @@ block content
 			h1 Sign in
 			form(role='form', action='/login', method='post')
 				.form-group
-					label(for='email') Email address:
-					input#email.form-control(type='email',name='email', autofocus)
+					label(for='username') Username:
+					input#username.form-control(type='text',name='username', autofocus)
 				.form-group
 					label(for='pwd') Password:
 					input#pwd.form-control(type='password',name='pwd')
