--- a/views/register.jade
+++ b/views/register.jade
@@ -11,11 +11,11 @@ block content
 			h1 Sign Up
 			form(role='form', action='/register', method='post')
 				.form-group
+					label(for='username') User Name:
+					input#username.form-control(type='text',name="username")
+				.form-group
 					label(for='email') Email address:
 					input#email.form-control(type='email', name='email', autofocus)
-				.form-group
-					label(for='name') User Name:
-					input#name.form-control(type='text',name="username")
 				.form-group
 					label(for='pwd') Password:
 					input#pwd.form-control(type='password', name='pwd')
