--- a/views/index.jade
+++ b/views/index.jade
@@ -34,6 +34,14 @@ block content
 				.row
 					.col-sm-12
 						div#playerCards
+							img.card.cardToBePlayed#card0
+							img.card.cardToBePlayed#card1
+							img.card.cardToBePlayed#card2
+							img.card.cardToBePlayed#card3
+							img.card.cardToBePlayed#card4
+							img.card.cardToBePlayed#card5
+							img.card.cardToBePlayed#card6
+							img.card.cardToBePlayed#card7
 			.col-sm-4#messageArea
 				label.well Messages
 				ul#messages
