--- a/views/index.jade
+++ b/views/index.jade
@@ -5,43 +5,45 @@ block content
 	.container-fluid
 		.row
 			#board.col-sm-6
-				.row
-					.col-sm-5
-					.col-sm-2
-						div.player#topPlayer
-							img.card
-							span.playerName
-					.col-sm-5
-				.row
-					.col-sm-2
-						div.player#leftPlayer
-							img.card
-							span.playerName
-					.col-sm-8
-					.col-sm-2
-						div.player#rightPlayer
-							img.card
-							span.playerName
-				.row
-					.col-sm-5
-					.col-sm-2
-						div.player#bottomPlayer
-							img.card
-							span.playerName
-					.col-sm-5
-						//- div.boardOptions
-						//-   button(onclick="invitePlayers();") Invite players
+				#playarea
+					.row.line
+						.col-sm-5
+						.col-sm-2
+							div.player#topPlayer
+								//- img.card
+								span.playerName
+						.col-sm-5
+					.row.line
+						.col-sm-2
+							div.player#leftPlayer
+								//- img.card
+								span.playerName
+						.col-sm-8
+						.col-sm-2
+							div.player#rightPlayer
+								//- img.card
+								span.playerName
+					.row.line
+						.col-sm-5
+						.col-sm-2
+							div.player#bottomPlayer
+								//- img.card
+								span.playerName
+						.col-sm-5
+							//- div.boardOptions
+							//-   button(onclick="invitePlayers();") Invite players
 				.row
 					.col-sm-12
 						div#playerCards
-							img.card.cardToBePlayed#card0
-							img.card.cardToBePlayed#card1
-							img.card.cardToBePlayed#card2
-							img.card.cardToBePlayed#card3
-							img.card.cardToBePlayed#card4
-							img.card.cardToBePlayed#card5
-							img.card.cardToBePlayed#card6
-							img.card.cardToBePlayed#card7
+							//- p test
+							//- img.card.cardToBePlayed#card0
+							//- img.card.cardToBePlayed#card1
+							//- img.card.cardToBePlayed#card2
+							//- img.card.cardToBePlayed#card3
+							//- img.card.cardToBePlayed#card4
+							//- img.card.cardToBePlayed#card5
+							//- img.card.cardToBePlayed#card6
+							//- img.card.cardToBePlayed#card7
 			.col-sm-4#messageArea
 				label.well Messages
 				ul#messages
@@ -49,7 +51,7 @@ block content
 				label.well Connected Users
 					a(href='/logout',style="display:block;") Disconnect #{session.user.name}
 				ul#userList
-				button(onclick='invitePlayers();') Invite
+				button(onclick='invitePlayers();', style='margin-bottom:100px') Invite
 		
 		form(action='')
 			input#m(autocomplete='off')
@@ -57,3 +59,4 @@ block content
 block scripts
 	script(src='/node_modules/socket.io-client/socket.io.js')
 	script(src='/js/chat.js')
+	script(src='/js/cards.js')
