playing 8 cards available with new code factorisation into game.js

--- a/views/template.jade
+++ b/views/template.jade
@@ -8,6 +8,7 @@ html
 		block css
 	body
 		block content
-		script(src='http://code.jquery.com/jquery.js')
+		//- script(src='http://code.jquery.com/jquery.js')
+		script(src='/js/jquery.js')
 		script(src='/js/bootstrap.js')
 		block scripts
