--- a/css/common.css
+++ b/css/common.css
@@ -2,29 +2,32 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
+      /*position: relative;*/
 }
 body {
       font: 13px Helvetica, Arial;
 }
-form {
+form/* {
       background: #000;
       padding: 3px;
       position: fixed;
       bottom: 0;
       width: 100%;
-}
-form input {
+}*/
+#m{
       border: 0;
-      padding: 10px;
-      width: 90%;
-      margin-right: .5%;
+      /*padding: 10px;*/
+      width: 100%;
+      height: 100%;
+      /*margin-right: .5%;*/
+      border: thin solid;
 }
-form button {
+/*form button {
       width: 9%;
       background: rgb(130, 224, 255);
       border: none;
       padding: 10px;
-}
+}*/
 #messages {
       list-style-type: none;
       margin: 0;
@@ -38,7 +41,7 @@ form button {
 }
 #board {
       /*position: absolute;*/
-      height: 350px;
+      height: 75%;
       /*width:500px;*/
       /*width:100%;*/
       background-color:green;
@@ -63,10 +66,14 @@ form button {
       /*text-align:center;*/
 }
 .card {
-      width:60px;
-      height:77px;
+      width:100%;
+      height:100%;
+      max-width: 40;
+      max-height: 60;
 }
 .cardToBePlayed{
+      width:60px;
+      height:77px;
       position: fixed;
 }
 #playerCards{
@@ -74,22 +81,30 @@ form button {
       padding-left: 100px;
 }
 /*MESSAGE AREA*/
-#messageArea{
+#chatWindow{
       border: thin solid;
       text-align: center;
-      height: 500px;
+      height: 20%;
 }
 /*USER AREA*/
 #usersArea{
       border: thin solid;
       text-align: center;
+      height: 75%;
 }
 #usersArea ul li{
       list-style: none;
+}
+#messageForm{
+      height: 5%;
 }
 .hidden{
       display: none;
 }
 .line{
       height: 80px;
+      width: 100%;
+}
+.hidden{
+      display:none;
 }
