announce functionnal but lack link to redistribution => next game + is everyone pass

--- a/views/index.jade
+++ b/views/index.jade
@@ -7,19 +7,15 @@ block content
 			#board.col-xs-10
 				#playarea
 					.row.line
-						.col-xs-2.col-xs-offset-5
-							div.player#topPlayer
+						.col-xs-2.col-xs-offset-5.player#topPlayer
 								span.playerName
 					.row.line
-						.col-xs-2
-							div.player#leftPlayer
+						.col-xs-2.player#leftPlayer
 								span.playerName
-						.col-xs-2.col-xs-offset-8
-							div.player#rightPlayer
+						.col-xs-2.col-xs-offset-8.player#rightPlayer
 								span.playerName
 					.row.line
-						.col-xs-2.col-xs-offset-5
-							div.player#bottomPlayer
+						.col-xs-2.col-xs-offset-5.player#bottomPlayer
 								span.playerName
 				.row
 					.col-xs-12
