--- a/css/common.css
+++ b/css/common.css
@@ -66,10 +66,10 @@ form/* {
       /*text-align:center;*/
 }
 .card {
-      width:100%;
+      width:80%;
       height:100%;
-      max-width: 40;
-      max-height: 60;
+      min-width: 40;
+      min-height: 60;
 }
 .cardToBePlayed{
       width:60px;
