--- a/views/index.jade
+++ b/views/index.jade
@@ -5,6 +5,35 @@ block content
 	.container-fluid
 		.row
 			#board.col-xs-10
+				.col-xs-6.col-xs-offset-3#inviteBoard.hidden
+					p zafefez
+					button(type='button', value='acceptInvite', onclick='acceptInvite();') Accept
+					button(type='button', value='refuseInvite', onclick='refuseInvite();') Refuse
+				.col-xs-6.col-xs-offset-3#announceBoard.hidden
+					.row.value
+						.col-xs-2: button.announceValue(type='button', value='80', onclick='manageAnnounceButton(this);') 80
+						.col-xs-2: button.announceValue(type='button', value='90', onclick='manageAnnounceButton(this);') 90
+						.col-xs-2: button.announceValue(type='button', value='100', onclick='manageAnnounceButton(this);') 100
+						.col-xs-2: button.announceValue(type='button', value='110', onclick='manageAnnounceButton(this);') 110
+						.col-xs-2: button.announceValue(type='button', value='120', onclick='manageAnnounceButton(this);') 120
+						.col-xs-2: button.announceColorounceValue(type='button', value='130', onclick='manageAnnounceButton(this);') 130
+						.col-xs-2: button.announceValue(type='button', value='140', onclick='manageAnnounceButton(this);') 140
+						.col-xs-2: button.announceValue(type='button', value='150', onclick='manageAnnounceButton(this);') 150
+						.col-xs-2: button.announceValue(type='button', value='160', onclick='manageAnnounceButton(this);') 160
+						.col-xs-2: button.announceValue(type='button', value='170', onclick='manageAnnounceButton(this);') 170
+						.col-xs-2: button.announceValue(type='button', value='250', onclick='manageAnnounceButton(this);') 250
+						.col-xs-2: button.announceValue(type='button', value='270', onclick='manageAnnounceButton(this);') 270
+					.row.color
+						.col-xs-2: button.announceColor(type='button', value='H', onclick='manageAnnounceButton(this);') &#9829
+						.col-xs-2: button.announceColor(type='button', value='S', onclick='manageAnnounceButton(this);') &#9824
+						.col-xs-2: button.announceColor(type='button', value='D', onclick='manageAnnounceButton(this);') &#9827
+						.col-xs-2: button.announceColor(type='button', value='C', onclick='manageAnnounceButton(this);') &#9830
+						.col-xs-2: button.announceColor(type='button', value='NT', onclick='manageAnnounceButton(this);') NT
+						.col-xs-2: button.announceColor(type='button', value='AT', onclick='manageAnnounceButton(this);') AT
+					.row.validation
+						.col-xs-4: button(type='button', value='Announce', onclick='sendAnnounce(this);') Announce
+						.col-xs-4: button(type='button', value='Pass', onclick='sendAnnounce(this);') Pass
+						.col-xs-4: button(type='button', value='Coinche', onclick='sendAnnounce(this);') Coinche
 				#playarea
 					.row.line
 						.col-xs-2.col-xs-offset-5.player#topPlayer
@@ -18,7 +47,6 @@ block content
 						.col-xs-2.col-xs-offset-5.player#bottomPlayer
 								span.playerName
 				.row
-					.col-xs-12.hidden#announceBoard
 					.col-xs-12
 						div#playerCards
 			.col-xs-2#usersArea
