count points to be tested but loop game OK

--- a/views/index.jade
+++ b/views/index.jade
@@ -16,7 +16,7 @@ block content
 						.col-xs-2: button.announceValue(type='button', value='100', onclick='manageAnnounceButton(this);') 100
 						.col-xs-2: button.announceValue(type='button', value='110', onclick='manageAnnounceButton(this);') 110
 						.col-xs-2: button.announceValue(type='button', value='120', onclick='manageAnnounceButton(this);') 120
-						.col-xs-2: button.announceColorounceValue(type='button', value='130', onclick='manageAnnounceButton(this);') 130
+						.col-xs-2: button.announceValue(type='button', value='130', onclick='manageAnnounceButton(this);') 130
 						.col-xs-2: button.announceValue(type='button', value='140', onclick='manageAnnounceButton(this);') 140
 						.col-xs-2: button.announceValue(type='button', value='150', onclick='manageAnnounceButton(this);') 150
 						.col-xs-2: button.announceValue(type='button', value='160', onclick='manageAnnounceButton(this);') 160
@@ -24,12 +24,12 @@ block content
 						.col-xs-2: button.announceValue(type='button', value='250', onclick='manageAnnounceButton(this);') 250
 						.col-xs-2: button.announceValue(type='button', value='270', onclick='manageAnnounceButton(this);') 270
 					.row.color
-						.col-xs-2: button.announceColor(type='button', value='H', onclick='manageAnnounceButton(this);') &#9829
-						.col-xs-2: button.announceColor(type='button', value='S', onclick='manageAnnounceButton(this);') &#9824
-						.col-xs-2: button.announceColor(type='button', value='D', onclick='manageAnnounceButton(this);') &#9827
-						.col-xs-2: button.announceColor(type='button', value='C', onclick='manageAnnounceButton(this);') &#9830
-						.col-xs-2: button.announceColor(type='button', value='NT', onclick='manageAnnounceButton(this);') NT
-						.col-xs-2: button.announceColor(type='button', value='AT', onclick='manageAnnounceButton(this);') AT
+						.col-xs-2: button.announceColor(type='button', value='H', onclick='manageAnnounceButton(this);', style='color:red') &#9829
+						.col-xs-2: button.announceColor(type='button', value='S', onclick='manageAnnounceButton(this);', style='color:black') &#9824
+						.col-xs-2: button.announceColor(type='button', value='D', onclick='manageAnnounceButton(this);', style='color:red') &#9830
+						.col-xs-2: button.announceColor(type='button', value='C', onclick='manageAnnounceButton(this);', style='color:black') &#9827
+						.col-xs-2: button.announceColor(type='button', value='NT', onclick='manageAnnounceButton(this);', style='color:black') NT
+						.col-xs-2: button.announceColor(type='button', value='AT', onclick='manageAnnounceButton(this);', style='color:black') AT
 					.row.validation
 						.col-xs-4: button(type='button', value='Announce', onclick='sendAnnounce(this);') Announce
 						.col-xs-4: button(type='button', value='Pass', onclick='sendAnnounce(this);') Pass
