display scores functional

--- a/views/index.jade
+++ b/views/index.jade
@@ -38,6 +38,20 @@ block content
 					.row.line
 						.col-xs-2.col-xs-offset-5.player#topPlayer
 								span.playerName
+						.col-xs-3.col-xs-offset-2#scores
+							table
+								tr
+									th Us
+									th Them	
+								tr
+									td#scoreUsGame 0
+									td#scoreThemGame 0
+								tr
+									td#scoreUsMatch 0
+									td#scoreThemMatch 0
+								tr
+									td#scoreUsJetee 0
+									td#scoreThemJetee 0
 					.row.line
 						.col-xs-2.player#leftPlayer
 								span.playerName
