fix bug wrong playter on second jetee, add 'your turn' label on turn, and others... :D

--- a/css/common.css
+++ b/css/common.css
@@ -165,3 +165,9 @@ table td{
       border: thin solid;
       margin:2px;
 }
+
+.announce{
+      background-color: grey;
+      color:white;
+      
+}
