--- a/views/index.jade
+++ b/views/index.jade
@@ -38,6 +38,7 @@ block content
 					.row.line
 						.col-xs-2.col-xs-offset-5.player#topPlayer
 								span.playerName
+								span.announce
 						.col-xs-3.col-xs-offset-2#scores
 							table
 								tr
@@ -55,11 +56,14 @@ block content
 					.row.line
 						.col-xs-2.player#leftPlayer
 								span.playerName
+								span.announce
 						.col-xs-2.col-xs-offset-8.player#rightPlayer
 								span.playerName
+								span.announce
 					.row.line
 						.col-xs-2.col-xs-offset-5.player#bottomPlayer
 								span.playerName
+								span.announce
 				.row
 					.col-xs-12
 						div#playerCards
