add new display msg : float absolute going top and vanishing after some time

--- a/css/common.css
+++ b/css/common.css
@@ -100,6 +100,13 @@ body{
       position: relative;
       width: 100%;
 }
+#chatWindow{
+      position: absolute;
+}
+#chatWindow * {
+      font-size: 25px;
+      color: red;
+}
 
 
 /*******************************/
@@ -169,15 +176,9 @@ body{
 #messageForm{
       height: 5%;
 }
-.hidden{
-      display: none;
-}
 .line{
       height: 80px;
       width: 100%;
-}
-.hidden{
-      display:none;
 }
 
 button{
