--- a/css/common.css
+++ b/css/common.css
@@ -128,70 +128,17 @@ button:hover, button.selected{
       font-size: 25px;
       color: red;
 }
-
-
-/*******************************/
-/***********PLAYING BOARD*********/
-/*******************************/
-/*#board{
-      background-color:green;
-      position: absolute;
-}*/
-
-/*
-#m{
-      border: 0;
-      width: 100%;
-      height: 100%;
-      border: thin solid;
-}
-
 #messages {
       list-style-type: none;
-      margin: 0;
-      padding: 0;
 }
-#messages li {
-      padding: 5px 10px;
-}
-#messages li:nth-child(odd) {
-      background: #eee;
-}
-#board {
-      height: 75%;
-      background-color:green;
-      right:0px;
-      border: thin solid;
-}
-.player {
-      text-align: center;
-}
-.card {
-      width:80%;
-      height:100%;
-      min-width: 40;
-      min-height: 60;
-}
-.cardToBePlayed{
-      width:60px;
-      height:77px;
-      position: absolute;
-}
-#playerCards{
-      text-align: center;
-      padding-left: 100px;
-}
-#chatWindow{
-      border: thin solid;
-      text-align: center;
-      height: 20%;
-}
+
+/*******************************/
+/***********USERS*********/
+/*******************************/
 #usersArea{
-      border: thin solid;
       text-align: center;
-      height: 75%;
 }
-#usersArea ul li{
+#userList li{
       list-style: none;
 }
 #messageForm{
