--- a/css/common.css
+++ b/css/common.css
@@ -127,6 +127,11 @@ td{
       background-color: green;
       text-align: center;
 }
+.cardToBePlayed{
+      position: relative;
+      height: 150px;
+      width: 100px;
+}
 /*.announce{
       
 }*/
