--- a/css/common.css
+++ b/css/common.css
@@ -158,9 +158,15 @@ td{
 /************CHAT**************/
 /*******************************/
 #messageInput{
-      bottom:10px;
-      position: relative;
-      width: 100%;
+      bottom:5%;
+      position: absolute;
+      width: 95%;
+      background-color: none;
+      background-color: rgba(0,0,0,0.5);
+      border: none;
+      color: white;
+      padding-left: 10px;
+
 }
 #chatWindow{
       position: absolute;
