--- a/css/common.css
+++ b/css/common.css
@@ -59,8 +59,8 @@ td{
       position: absolute;
       color:white;
       background-color: black;
-      padding-left: 0;
-      padding-top: 0;
+      margin-left: 10px;
+      margin-top: 10px;
 }
 /************PLAYERS**************/
 #playarea{
