new functionality : leave game button

--- a/views/index.jade
+++ b/views/index.jade
@@ -45,16 +45,16 @@ block content
 									th Them	
 								tr
 									td Global Scores
-									td#scoreUsGame 0
-									td#scoreThemGame 0
+									td#scoreUsGame.score 0
+									td#scoreThemGame.score 0
 								tr
 									td Current Match
-									td#scoreUsMatch 0
-									td#scoreThemMatch 0
+									td#scoreUsMatch.score 0
+									td#scoreThemMatch.score 0
 								tr
 									td Last Jetee
-									td#scoreUsJetee 0
-									td#scoreThemJetee 0
+									td#scoreUsJetee.score 0
+									td#scoreThemJetee.score 0
 						#playarea
 							.player#topPlayer
 								span.playerName
