manage display belote & increment scores... to be checked works well to decide who wins the jetee

--- a/css/common.css
+++ b/css/common.css
@@ -104,7 +104,7 @@ td{
 .player span{
       display: block;
 }
-.announce {
+.announce, .belote {
       border-radius: 4px;
       background-color: lightgrey;
       padding-right: 10px;
