--- a/views/index.jade
+++ b/views/index.jade
@@ -7,35 +7,44 @@ block content
 			.col-xs-10
 				.row
 					#board
-						.col-xs-6.col-xs-offset-3#inviteBoard.hidden
+						.col-xs-6.col-xs-offset-3.popup.hidden#inviteFriends
+							ul#inviteList
+							button(type='button', value='invite', onclick='invitePlayers();') Invite
+							button(type='button', value='abortInvitation', onclick='abortFriendsInvitation();') Cancel
+						.col-xs-6.col-xs-offset-3.popup#newGameBoard
+							button#newGameButton(type='button', value='newGame', onclick='newGame();') NEW GAME
+							button#inviteButton.hidden(type='button', value='newGame', onclick='inviteFriends();') INVITE FRIENDS
+							button#leaveRoomButton.hidden(type='button', value='newGame', onclick='leaveRoom();') LEAVE ROOM
+							button#playButton.playNotAvailable.hidden(type='button', value='newGame', onclick='launchGame();') PLAY
+						.col-xs-6.col-xs-offset-3.popup#inviteBoard.hidden
 							p A player invited you for a Game.
 							button(type='button', value='acceptInvite', onclick='acceptInvite();') Accept
 							button(type='button', value='refuseInvite', onclick='refuseInvite();') Refuse
 						.col-xs-6.col-xs-offset-3#announceBoard.hidden
 							.row.value
-								.col-xs-2: button.announceValue(type='button', value='80', onclick='manageAnnounceButton(this);') 80
-								.col-xs-2: button.announceValue(type='button', value='90', onclick='manageAnnounceButton(this);') 90
-								.col-xs-2: button.announceValue(type='button', value='100', onclick='manageAnnounceButton(this);') 100
-								.col-xs-2: button.announceValue(type='button', value='110', onclick='manageAnnounceButton(this);') 110
-								.col-xs-2: button.announceValue(type='button', value='120', onclick='manageAnnounceButton(this);') 120
-								.col-xs-2: button.announceValue(type='button', value='130', onclick='manageAnnounceButton(this);') 130
-								.col-xs-2: button.announceValue(type='button', value='140', onclick='manageAnnounceButton(this);') 140
-								.col-xs-2: button.announceValue(type='button', value='150', onclick='manageAnnounceButton(this);') 150
-								.col-xs-2: button.announceValue(type='button', value='160', onclick='manageAnnounceButton(this);') 160
-								.col-xs-2: button.announceValue(type='button', value='170', onclick='manageAnnounceButton(this);') 170
-								.col-xs-2: button.announceValue(type='button', value='250', onclick='manageAnnounceButton(this);') 250
-								.col-xs-2: button.announceValue(type='button', value='270', onclick='manageAnnounceButton(this);') 270
+								.col-xs-2: button.announceButton.announceValue(type='button', value='80', onclick='manageAnnounceButton(this);') 80
+								.col-xs-2: button.announceButton.announceValue(type='button', value='90', onclick='manageAnnounceButton(this);') 90
+								.col-xs-2: button.announceButton.announceValue(type='button', value='100', onclick='manageAnnounceButton(this);') 100
+								.col-xs-2: button.announceButton.announceValue(type='button', value='110', onclick='manageAnnounceButton(this);') 110
+								.col-xs-2: button.announceButton.announceValue(type='button', value='120', onclick='manageAnnounceButton(this);') 120
+								.col-xs-2: button.announceButton.announceValue(type='button', value='130', onclick='manageAnnounceButton(this);') 130
+								.col-xs-2: button.announceButton.announceValue(type='button', value='140', onclick='manageAnnounceButton(this);') 140
+								.col-xs-2: button.announceButton.announceValue(type='button', value='150', onclick='manageAnnounceButton(this);') 150
+								.col-xs-2: button.announceButton.announceValue(type='button', value='160', onclick='manageAnnounceButton(this);') 160
+								.col-xs-2: button.announceButton.announceValue(type='button', value='170', onclick='manageAnnounceButton(this);') 170
+								.col-xs-2: button.announceButton.announceValue(type='button', value='250', onclick='manageAnnounceButton(this);') 250
+								.col-xs-2: button.announceButton.announceValue(type='button', value='270', onclick='manageAnnounceButton(this);') 270
 							.row.color
-								.col-xs-2: button.announceColor(type='button', value='H', onclick='manageAnnounceButton(this);', style='color:red') &#9829 
-								.col-xs-2: button.announceColor(type='button', value='S', onclick='manageAnnounceButton(this);', style='color:black') &#9824
-								.col-xs-2: button.announceColor(type='button', value='D', onclick='manageAnnounceButton(this);', style='color:red') &#9830
-								.col-xs-2: button.announceColor(type='button', value='C', onclick='manageAnnounceButton(this);', style='color:black') &#9827
-								.col-xs-2: button.announceColor(type='button', value='NT', onclick='manageAnnounceButton(this);', style='color:black') NT
-								.col-xs-2: button.announceColor(type='button', value='AT', onclick='manageAnnounceButton(this);', style='color:black') AT
+								.col-xs-2: button.announceButton.announceColor(type='button', value='H', onclick='manageAnnounceButton(this);', style='color:red') &#9829 
+								.col-xs-2: button.announceButton.announceColor(type='button', value='S', onclick='manageAnnounceButton(this);', style='color:black') &#9824
+								.col-xs-2: button.announceButton.announceColor(type='button', value='D', onclick='manageAnnounceButton(this);', style='color:red') &#9830
+								.col-xs-2: button.announceButton.announceColor(type='button', value='C', onclick='manageAnnounceButton(this);', style='color:black') &#9827
+								.col-xs-2: button.announceButton.announceColor(type='button', value='NT', onclick='manageAnnounceButton(this);', style='color:black') NT
+								.col-xs-2: button.announceButton.announceColor(type='button', value='AT', onclick='manageAnnounceButton(this);', style='color:black') AT
 							.row.validation
-								.col-xs-4: button(type='button', value='Announce', onclick='sendAnnounce(this);') Announce
-								.col-xs-4: button(type='button', value='Pass', onclick='sendAnnounce(this);') Pass
-								.col-xs-4: button(type='button', value='Coinche', onclick='sendAnnounce(this);') Coinche
+								.col-xs-4: button.announceButton(type='button', value='Announce', onclick='sendAnnounce(this);') Announce
+								.col-xs-4: button.announceButton(type='button', value='Pass', onclick='sendAnnounce(this);') Pass
+								.col-xs-4: button.announceButton(type='button', value='Coinche', onclick='sendAnnounce(this);') Coinche
 						span#currentAnnounce
 						#scores
 							table
@@ -71,10 +80,10 @@ block content
 				.row
 					#playerCards
 			.col-xs-2#usersArea
-				label Coupaings
-					a(href='/logout',style="display:block;") Disconnect #{session.user.name}
+				label(style='color:white;') Coupaings
+					a(href='/logout',style="display:block;color:grey;") Disconnect #{session.user.name}
 				ul#userList
-				button(onclick='invitePlayers();', style='margin-bottom:100px') Invite
+				//- button(onclick='invitePlayers();', style='margin-bottom:100px') Invite
 		#chatWindow 
 			ul#messages
 		#messageForm.hidden
