--- a/views/index.jade
+++ b/views/index.jade
@@ -91,6 +91,6 @@ block content
 				input#messageInput(autocomplete='off')
 				button.hidden Send
 block scripts
-	script(src='/node_modules/socket.io-client/socket.io.js')
+	script(src='/node_modules/socket.io/node_modules/socket.io-client/socket.io.js')
 	script(src='/js/chat.js')
 	script(src='/js/cards.js')
